--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         #repository: overbaard/multi-repo-ci
         repository: kabir/multi-repo-ci
-        ref: grab-maven-artifacts
+        ref: split-merge-large-jars
         path: .ci-tools
     - name: Build with Maven
       working-directory: .ci-tools
