--- a/.repo-config/config.yml
+++ b/.repo-config/config.yml
@@ -7,6 +7,7 @@ issue-reporting:
    success: CI-Success
    failure: CI-Failure
 end-job:
+  if: ${{ always() }}
   steps:
     - name: test
       run: |-
