--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -6,7 +6,7 @@ env:
 build-job: build
 jobs:
   # Build the server skipping tests for speed since other jobs depend on this. The maven repo is cached
-  build:
+build:
     env:
       MAVEN_BUILD_EXTRA_PARAMS: -DlegacyBuild -DlegacyRelease -DskipTests
     run:
@@ -16,16 +16,16 @@ jobs:
       - shell: ls -R dist/target/
       - shell: echo "build done!"
       # Temp code
-      - shell: echo "My version ${OB_PROJECT_VERSION}"
-      
+      - shell: "echo My version: ${OB_PROJECT_VERSION}"
+
   save-dist-zip-and-artifacts:
     needs: [build]
     run:
-      - mvn: install -pl dist -Prelease 
-      - shell: |
-        cp dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS}/wildfly.zip
-        # Would be better to just zip and copy the repo here
-        cp dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt ${OB_ARTIFACTS}/all-artifacts.zip
+      - mvn: install -pl dist -Prelease
+      - shell: cp dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS}/wildfly.zip
+      # TODO use https://github.com/wildfly/wildfly-s2i/tree/master/tools/maven-repo-generator to create the repo zip instead
+      - shell: cp dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt ${OB_ARTIFACTS}/all-artifacts.zip
+
 
   #####################################
   # Parallel tests - depend on wildfly-core-build
