--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -24,7 +24,7 @@ jobs:
       - mvn: install -pl dist -Prelease
       - shell: cp dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS_DIR}/wildfly.zip
       # It would be nice if we could use an action to do the clone instead
-      - shell: git clone git@github.com:wildfly/wildfly-s2i.git
+      - shell: git clone https://github.com/wildfly/wildfly-s2i.git
       - shell: cd wildfly-s2i/tools/maven-repo-generator
       - mvn: install
       - shell: java -jar target/target/maven-repo-generator-1.0.jar ../../../dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
