--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -189,7 +189,8 @@ end-job:
         cat dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
         mv dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS_DIR}/wildfly.zip
     - run: |
-        cd wildfly-s2i/tools/maven-repo-generator
+        # cd wildfly-s2i/tools/maven-repo-generator
+        cd tools/maven-repo-generator
         mvn install
         java -jar wildfly-s2i/tools/maven-repo-generator/target/maven-repo-generator-1.0.jar dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
         mv maven-repo.zip ${OB_ARTIFACTS_DIR}/maven-repo.zip
