--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -188,11 +188,11 @@ end-job:
         mvn install -pl dist -Prelease ${OB_MAVEN_DEPENDENCY_VERSIONS}
         cat dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
         mv dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS_DIR}/wildfly.zip
-    - run: |
-        # cd wildfly-s2i/tools/maven-repo-generator
+    - name: Back up maven repo zip
+      run: |
         cd tools/maven-repo-generator
         mvn install
-        java -jar wildfly-s2i/tools/maven-repo-generator/target/maven-repo-generator-1.0.jar dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
+        java -jar target/maven-repo-generator-1.0.jar ../../../dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
         mv maven-repo.zip ${OB_ARTIFACTS_DIR}/maven-repo.zip
         ls -al ${OB_ARTIFACTS_DIR}
       working-directory: .maven-repo-generator
