--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -192,7 +192,7 @@ end-job:
       run: |
         cd tools/maven-repo-generator
         mvn install
-        java -jar ../../../target/maven-repo-generator-1.0.jar ../../../dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
-        mv maven-repo.zip ${OB_ARTIFACTS_DIR}/maven-repo.zip
+        java -jar target/maven-repo-generator-1.0.jar ../../../dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
+        mv maven-repo.zip ../../../${OB_ARTIFACTS_DIR}/maven-repo.zip
         ls -al ../../../${OB_ARTIFACTS_DIR}
       working-directory: .maven-repo-generator
