--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -193,6 +193,6 @@ end-job:
         cd tools/maven-repo-generator
         mvn install
         java -jar target/maven-repo-generator-1.0.jar ../../../dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
-        mv maven-repo.zip ../../../${OB_ARTIFACTS_DIR}/maven-repo.zip
-        ls -al ../../../${OB_ARTIFACTS_DIR}
+        mv maven-repo.zip ${OB_ARTIFACTS_DIR}/maven-repo.zip
+        ls -al ${OB_ARTIFACTS_DIR}
       working-directory: .maven-repo-generator
