--- a/.github/workflows/tmp.yml
+++ b/.github/workflows/tmp.yml
@@ -13,10 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       blah: ${GITHUB_WORKSPACE}/test
+      blah2: ${{GITHUB_WORKSPACE}}/test
     steps:
+    - run: echo "::set-env name=blah3::${GITHUB_WORKSPACE}/test"
     - run: |
         echo home: ${HOME}
         echo workspace: ${GITHUB_WORKSPACE}
         echo pwd on next line
         pwd
         echo blah: ${blah}
+        echo blah2: ${blah2}
+        echo blah3: ${blah3}
